Revision history for Sub-Name

{{$NEXT}}

0.26      2019-10-05 22:23:12Z
    - no changes since 0.25

0.25      2018-04-21 14:38:45Z (TRIAL RELEASE)
    - fix "Undefined symbol "DPPP_my_croak_xs_usage"" error on some perls
      (RT#125158)

0.24      2018-04-21 08:15:30Z (TRIAL RELEASE)
    - small internal changes to bring implementation in line with changes to
      Sub::Util (Graham Knop)

0.23      2016-10-23 04:33:37Z (TRIAL RELEASE)
    - test for renaming lexical subs, which should work on perl 5.22+. (PR#10,
      Graham Knop)

0.22      2016-10-17 01:41:42Z (TRIAL RELEASE)
    - %DB::sub is now populated correctly for sub names with wide characters
      or nulls. (PR#9: Graham Knop, Leon Timmermans, Reini Urban)
    - better perl 5.6 compatibility by lowering prereqs of core modules

0.21      2016-10-02 05:00:12Z
    - no change since 0.20

0.20      2016-09-11 00:33:10Z (TRIAL RELEASE)
    - fix occasional segmentation fault on OpenBSD when malloc randomization
      causes nameptr to be at the beginning of the page (RT#117072, Alexander
      Bluhm)

0.19      2016-08-18 18:52:33Z
    - fix checking of SvUTF8 flag

0.18      2016-08-16 01:07:54Z
    - no changes since 0.17

0.17      2016-06-27 22:45:27Z (TRIAL RELEASE)
    - fixed parsing error where the name contains a single colon but the last
      separator is :: (Leon Timmermans)

0.16      2016-06-21 03:41:40Z (TRIAL RELEASE)
    - support binary and unicode symbol names (Leon Timmermans, Aristotle
      Pagaltzis, Peter Rabbitson, Reini Urban, PR#8)

0.15      2016-03-15 22:17:38Z
    - fix uninitialized warning in test on perls < 5.8.6 (RT#104510)
    - repository moved to the github p5sagit organization (the primary is on
      shadowcat, mirrored to github)

0.14      2015-04-24 03:26:54Z
    - remove mandatory dependencies for optional test
    - mark the test with B::C as TODO, as it seems to fail frequently and
      should not block normal installations

0.13      2015-03-28 06:27:23Z